...
                        detectDragGestures { change, drag ->
                            change.consume()
                            onDragVertically(drag.y)
                        }
                    }
                    .semantics {
                        contentDescription = if (expanded) "Close the menu" else "Open the menu"
                    },
                contentAlignment = Alignment.Center
            ) {
                Burger(progress = progress)
            }
        }
...
